# mdn-local-library-tutorial

./: .gitignore  Jenkinsfile  README.md  config.sh  flake.nix  hie.yaml  local-library.cabal  mock.db-shm  mock.db-wal  schema.sql
.devcontainer/: devcontainer.json  docker-compose.yml
app/: Main.hs
app/LocalLibrary/: Config.hs
config/LocalLibrary/: Config.hs
config/static/: pool.json  postgres.json  sqlite.json  warp.json
db/: Main.hs
mdbook/: 01-project-setup.md  02-haskell-syntax.md
src/: LocalLibrary.hs
src/LocalLibrary/: API.hs  Config.hs  Greetings.hs
src/LocalLibrary/Database/: Migrate.hs  Schema.hs
src/LocalLibrary/Greetings/: API.hs  Model.hs  Queries.hs  SampleData.hs
test/: Main.hs  Spec.hs
test/Spec/: Greetings.hs
