cabal-version:      2.4
name:               local-library
version:            0.1.0.0
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoFieldSelectors
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    LinearTypes
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base                  >=4.13.0.0 && <4.18.0.0.0
    , data-default
    , directory
    , exceptions
    , fast-logger
    , filepath
    , generic-lens
    , hs-opentelemetry-api
    , linear-base
    , monad-logger
    , mtl
    , optics-core
    , optics-th
    , optparse-generic
    , prettyprinter
    , profunctors
    , relude                >=1.0
    , resource-pool
    , resourcet
    , shower
    , time
    , with-utf8

  hs-source-dirs:     src
  default-language:   Haskell2010

common test-deps
  build-depends:
    , hspec
    , hspec-contrib
    , hspec-golden
    , hspec-wai
    , HUnit
    , QuickCheck
    , tasty
    , tasty-hspec
    , tasty-quickcheck

common web-deps
  build-depends:
    , beam-core
    , beam-migrate
    , beam-postgres
    , blaze-html
    , cassava
    , conduit
    , http-client
    , http-types
    , servant-auth
    , servant-auth-client
    , servant-auth-server
    , servant-auth-swagger
    , servant-blaze
    , servant-cassava
    , servant-client
    , servant-conduit
    , servant-multipart
    , servant-multipart-api
    , servant-multipart-client
    , servant-serialization
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , wai
    , warp

library
  import:          shared, web-deps
  exposed-modules: LocalLibrary
  hs-source-dirs:  src

library config
  import:          shared, web-deps
  exposed-modules: LocalLibrary.Config
  hs-source-dirs:  config

executable server
  import:         shared, web-deps
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , config
    , local-library

test-suite tests
  import:         shared, test-deps, web-deps
  main-is:        Spec.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  build-depends:  local-library
